# llm-langfuse-langchain-demo

./: README.md  pyproject.toml
config/: __init__.py
demo/: langfuse_langchain_demo.py
test_model/: qwen_benchmark.py
